# arm-pose-estimation

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.py  default_config.py  requirements.txt  setup.cfg  stream_dual.py  stream_dual_left_right.py  stream_standalone.py  stream_watch_only.py  stream_watch_phone.py
data_deploy/: Skeleton_14.xml  Skeleton_21.xml
data_deploy/data_stats/: HACKATHON_HACKATHON  H_DEFAULT_H_ROTS  H_DEFAULT_H_XYZ  MCSW_HAND_LARM_XYZ  MCSW_UARM_LARM_6DOF
data_deploy/nn/: deploy_models.py
data_types/: bone_map.py
example_scripts/: record_watch_only.py  record_watch_phone.py  stream_watch_only.py  stream_watch_phone.py  watch_phone_pocket_stream.py  watch_phone_uarm_record.py  watch_phone_uarm_stream.py
example_scripts/record/: watch_only_record.py  watch_phone_uarm_record.py
example_scripts/record_pose/: watch_only_pose_record.py  watch_only_record.py  watch_phone_uarm_record.py
example_scripts/stream/: watch_only.py  watch_phone_pocket.py  watch_phone_pocket_kalman.py  (+3 more)
experimental_applications/: watch_phone_pocket_lstm.py  watch_phone_to_ros.py  watch_phone_uarm_raw.py  watch_phone_watch_only.py  watch_raw_record.py
experimental_modes/: stream_dual_ros.py  stream_motive.py  stream_ros_exp.py  stream_transcription_commands.py
experimental_scripts/: free_hip_stream.py  record_dual_and_motive.py  record_watch.py  stream_ros_exp.py  voice_transcribe.py  voice_transcription.py  watch_phone_to_ros.py  watch_phone_uarm_raw.py  watch_phone_watch_only.py  watch_raw_record.py
nat_net/: MoCapData.py  NatNetClient.py  PythonSample.py  data_descriptions.py  nat_net_client.py  python_sample.py  stream_motive.py
predict/: estimate_joints.py  models.py
record/: record_dual_and_motive.py  record_watch.py
stream/: stream_matplotlib.py  stream_motive.py
utility/: deploy_models.py  messaging.py  names.py  transformations.py  voice_commands.py
(+168 files in other folders)
