[metadata]
name = wear_mocap_ape
version = 1.0.0
author = Fabian Weigend
author_email = fweigend@asu.edu
description =
    This package is part of the Wearable Motion Capture System.
    It provides a framework to make arm posture predictions from
    streamed wearable sensor data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wearable-motion-capture
project_urls =
    Bug Tracker = https://github.com/wearable-motion-capture/arm-pose-estimation/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    torch
    numpy
    pandas
    matplotlib
    pynput
    pyaudio
    google-cloud-speech


[options.packages.find]
where = src