[metadata]
name = wear_mocap_ape
version = 1.2.3
author = Fabian Weigend
author_email = fweigend@asu.edu
description =
    This package is part of the Wearable Motion Capture System.
    It provides a framework to make arm posture predictions from
    streamed wearable sensor data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wearable-motion-capture
project_urls =
    Bug Tracker = https://github.com/wearable-motion-capture/arm-pose-estimation/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2.0 License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    aenum
    torch
    numpy
    pandas
    matplotlib
    pynput
    einops
    bayesian_torch

packages = find:
include_package_data = True


[options.packages.find]
where = src
	
